Bug 387338 - loss of data warnings with XYInterpolationCurve
Summary: loss of data warnings with XYInterpolationCurve
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: backend (other bugs)
Version First Reported In: latest
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Alexander Semke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-11-27 00:32 UTC by uwestoehr
Modified: 2017-12-05 22:00 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description uwestoehr 2017-11-27 00:32:35 UTC
I get:

3>C:\CraftRoot\labplot\src\backend\worksheet\plots\cartesian\XYInterpolationCurve.cpp(271): warning C4267: 'initializing': conversion from 'size_t' to 'unsigned int', possible loss of data
3>C:\CraftRoot\labplot\src\backend\worksheet\plots\cartesian\XYInterpolationCurve.cpp(274): warning C4365: 'argument': conversion from 'unsigned int' to 'int', signed/unsigned mismatch
3>C:\CraftRoot\labplot\src\backend\worksheet\plots\cartesian\XYInterpolationCurve.cpp(316): warning C4365: 'argument': conversion from 'unsigned int' to 'int', signed/unsigned mismatch
3>C:\CraftRoot\labplot\src\backend\worksheet\plots\cartesian\XYInterpolationCurve.cpp(320): warning C4365: 'argument': conversion from 'unsigned int' to 'int', signed/unsigned mismatch
Comment 1 Alexander Semke 2017-12-05 22:00:55 UTC
Git commit 9a14706ac5f805cacc83b7aa6b514da8d19e55af by Alexander Semke.
Committed on 05/12/2017 at 22:00.
Pushed by asemke into branch 'master'.

Fixed couple of conversion errors in XYInterpolationCurve.cpp
FIXED-IN: 2.5

M  +4    -4    src/backend/worksheet/plots/cartesian/XYInterpolationCurve.cpp

https://commits.kde.org/labplot/9a14706ac5f805cacc83b7aa6b514da8d19e55af