Fixed couple of conversion errors in XYInterpolationCurve.cpp

BUG: 387338
FIXED-IN: 2.5